# pandora-toolchain

./: .dockerignore  .gitignore  AGENTS.md  API.md  BEHAVIOR.txt  CHANGE_BEHAVIOR.txt  Cargo.toml  DISCORD.md  Dockerfile  LOCALIZATION.md  PROJECT.md  README.md  TOOLS.md  WORKER.md  acix2.txt  docker-compose.yml  package-lock.json  package.json  script.py  start.bat  start.sh
docs/: API.md  DISCORD.md  LOCALIZATION.md  PROJECT.md  TOOLS.md  WORKER.md
scripts/: docker-gitsync-watch.ps1
src/: lib.rs  libpnbin.rs  main.rs
src/helpers/: handlers.rs  pndc.rs
src/helpers/handlers/: acixconfirm.rs  acixtemplate.rs  addapi.rs  addintro.rs  akiraconfirm.rs  attach.rs  auth.rs  backup.rs  cfont.rs  changerank.rs  configure.rs  destruct.rs  detach.rs  edit.rs  flavor.rs  font.rs  fontcheck.rs  gentoken.rs  get.rs  gitcode.rs  init.rs  interaction.rs  job.rs  lsauth.rs  merge.rs  message.rs  mod.rs  probe.rs  providers.rs  readmebase.rs  release.rs  remove.rs  scrape.rs  smartcode.rs  source.rs  studio.rs  token.rs  translation.rs  ts_message.rs  watermark.rs
src/lib/: bin.rs  mod.rs
src/lib/db/: core.rs  documentation.md
src/lib/env/: core.rs  standard.rs
src/lib/git/: core.rs  mod.rs  readme_guide.md
src/lib/http/: mod.rs  net.rs
src/lib/image/: core.rs  mod.rs  (+3 more)
src/libacix/: core.rs  mod.rs
src/libkagami/: core.rs  mod.rs
src/libpnanisub/: core.rs
src/libpnapi/: core.rs
src/libpncurl/: core.rs  gscrape.rs
src/libpndb/: core.rs  documentation.md
src/libpnenv/: core.rs  standard.rs
src/libpnforgejo/: core.rs  mod.rs
src/libpngit/: core.rs  mod.rs
src/libpnmal/: core.rs  mod.rs
src/libpnmpeg/: core.rs  mod.rs  preset.rs  probe.rs
src/libpnp2p/: core.rs  nyaaise.rs
src/libpnprotocol/: core.rs
src/libpntmdb/: core.rs  mod.rs
src/libpnupload/: core.rs
src/pnworker/: acix.rs  cache.rs  core.rs  estimate.rs  forwarding.rs  frontend.rs  keep.rs  lifecycle.rs  messages.rs  mod.rs  presence.rs  preview.rs  progress.rs  pull.rs  server_effects.rs  smartcode_drive.rs  studio.rs  tools.rs  util.rs  worker_slots.rs  workers_view.rs
web/: README.md  desktop.html  git.html  index.html  studio-sw.js  studio.html
(+43 files in other folders)
